--- a/package.json
+++ b/package.json
@@ -5,38 +5,45 @@
   "author": "Gio Palacino <gio@palacino.net>",
   "license": "CC0-1.0",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js",
-    "postinstall": "yarn unlink; yarn link"
+    "push": "docker push giocirque/reecam-web:latest",
+    "build": "docker build --pull --rm -f Dockerfile -t giocirque/reecam-web:latest -t giocirque/reecam-web:$(git rev-parse --short HEAD) .",
+    "start": "docker compose up --build --detach",
+    "serve": "ts-node ./src/server/serve.ts"
   },
   "bin": {
-    "ipcams": "./src/index.ts"
+    "ipcams": "./src/cli/index.ts",
+    "camserve": "./src/server/serve.ts"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "commander": "^8.3.0",
-    "dotenv": "^10.0.0",
-    "gifencoder": "^2.0.1",
-    "inquirer": "^8.2.0",
-    "jimp": "^0.16.1"
+    "axios": "0.24.0",
+    "commander": "8.3.0",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "gifencoder": "2.0.1",
+    "inquirer": "8.2.0",
+    "jimp": "0.16.1",
+    "mime-db": "1.51.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/gifencoder": "^2.0.1",
-    "@types/inquirer": "^8.1.3",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.11",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^16.0.2",
-    "eslint": "^7.32.0",
-    "jest": "^27.4.2",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "types-package-json": "^2.0.39",
-    "typescript": "^4.5.2"
+    "@types/cookie-parser": "1.4.2",
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/gifencoder": "2.0.1",
+    "@types/inquirer": "8.1.3",
+    "@types/jest": "27.0.3",
+    "@types/node": "16.11.11",
+    "@types/uuid": "8.3.3",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
+    "eslint": "8.4.0",
+    "jest": "26.6.3",
+    "ts-jest": "26.5.5",
+    "ts-node": "10.4.0",
+    "types-package-json": "2.0.39",
+    "typescript": "4.4.4"
   },
   "jest": {
     "preset": "ts-jest",
