--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "8.3.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "date-fns": "2.27.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "gifencoder": "2.0.1",
