--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Gio Palacino <gio@palacino.net>",
   "license": "CC0-1.0",
   "scripts": {
-    "push": "docker push --all-tags giocirque/reecam-web",
-    "build": "docker build --pull --rm -f Dockerfile -t giocirque/reecam-web:latest -t giocirque/reecam-web:$(git rev-parse --short HEAD) .",
+    "docker": "yarn build && yarn docker:build",
+    "build": "webpack && yarn --cwd ./src/app build && mkdir -p ./build/app/build/ && mv -f ./src/app/build ./build/app/",
+    "serve": "ts-node ./src/server/serve.ts",
     "start": "docker compose up --build --detach",
-    "serve": "ts-node ./src/server/serve.ts"
+    "docker:push": "docker push --all-tags giocirque/reecam-web",
+    "docker:build": "yarn build && docker build --pull --rm -f Dockerfile -t giocirque/reecam-web:latest -t giocirque/reecam-web:$(git rev-parse --short HEAD) ."
   },
   "bin": {
     "ipcams": "./src/cli/index.ts",
@@ -25,7 +27,8 @@
     "inquirer": "8.2.0",
     "jimp": "0.16.1",
     "mime-db": "1.51.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "webpack": "5.65.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.2",
@@ -36,14 +39,18 @@
     "@types/jest": "27.0.3",
     "@types/node": "16.11.11",
     "@types/uuid": "8.3.3",
+    "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "eslint": "8.4.0",
+    "fork-ts-checker-webpack-plugin": "6.5.0",
     "jest": "26.6.3",
     "ts-jest": "26.5.5",
+    "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "types-package-json": "2.0.39",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "webpack-cli": "4.9.1"
   },
   "jest": {
     "preset": "ts-jest",
