--- a/src/app/package.json
+++ b/src/app/package.json
@@ -18,6 +18,7 @@
     "@mui/styles": "5.2.2",
     "axios": "0.24.0",
     "date-fns": "2.27.0",
+    "history": "5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
