--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "8.4.0",
     "fork-ts-checker-webpack-plugin": "6.5.0",
     "jest": "26.6.3",
+    "node-loader": "2.0.0",
     "ts-jest": "26.5.5",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
