--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "reset": "rm -rf node_modules && rm -rf src/app/node_modules && yarn install && cd ./src/app && yarn install",
     "build": "rm -rf ./build && webpack && yarn --cwd ./src/app build && yarn move:app",
-    "serve": "ts-node ./src/server/serve.ts",
+    "serve": "set -o allexport; source ./.env; set +o allexport; ts-node ./src/server/serve.ts",
     "express": "cd ./build/server && npm init -y && npm install --production --no-optional --no-save --prefix . express",
     "start": "yarn build && sudo docker compose up --build --detach",
     "move:app": "mkdir -p ./build/app/build && cp -fr ./src/app/build ./build/app/",
