--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "express": "cd ./build/server && npm init -y && npm install --production --no-optional --no-save --prefix . express",
     "start": "yarn build && sudo docker compose up --build --detach",
     "move:app": "mkdir -p ./build/app/build && cp -fr ./src/app/build ./build/app/",
-    "dockerize": "yarn docker:build && echo \"Please push images from a local and authenticated device.\"",
-    "docker:push": "sudo docker push giocirque/reecam-web:latest; sudo docker push giocirque/reecam-web:$(git rev-parse --short HEAD)",
-    "docker:build": "yarn build && sudo docker build --pull --rm -f Dockerfile -t giocirque/reecam-web:latest -t giocirque/reecam-web:$(git rev-parse --short HEAD) ."
+    "dockerize": "yarn build && yarn docker:build && echo \"Please push images from a local and authenticated device.\"",
+    "docker:push": "sudo docker push -a giocirque/reecam-web",
+    "docker:build": "sudo docker build --platform=linux/amd64 --output=type=docker --rm -f Dockerfile -t giocirque/reecam-web:latest -t giocirque/reecam-web:$(git rev-parse --short HEAD) ."
   },
   "bin": {
     "ipcams": "./src/cli/index.ts"
